Installations + debug raylib

--- a/TETRIS/.vscode/tasks.json
+++ b/TETRIS/.vscode/tasks.json
@@ -14,7 +14,7 @@
             "windows": {
                 "command": "C:/raylib/w64devkit/bin/mingw32-make.exe",
                 "args": [
-                    "RAYLIB_PATH=C:/raylib/raylib",
+                    "RAYLIB_PATH=C:/raylib/w64devkit/x86_64-w64-mingw32/include/raylib.h",
                     "PROJECT_NAME=${fileBasenameNoExtension}",
                     "OBJS=src/*.cpp",
                     "BUILD_MODE=DEBUG"
